--- a/id1.html
+++ b/id1.html
@@ -5,6 +5,8 @@
     <title>Document</title>
   </head>
   <body>
+    <h1>Ulugbek</h1>
+
     <script>
       const per = prompt("how old are you", "19");
       console.log(per);
